A lil layout issue.. OCD

--- a/css/index.css
+++ b/css/index.css
@@ -602,7 +602,8 @@ a {
 		position: relative;
 		top: 20%;
 
-		margin-left: 5%;
+		margin-left: 2%;
+		margin-right: 2%;
 	}
 
 	#contact ul a li {
